--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,6 @@
 Package: placeholder
+Type: website
 Title: Does not matter.
 Version: 0.0.1
-Imports: bookdown, ggplot2
+Imports: bookdown, remotes
 Remotes: rstudio/bookdown
