--- a/.github/workflows/blogdown.yaml
+++ b/.github/workflows/blogdown.yaml
@@ -35,6 +35,9 @@ jobs:
       - name: Setup renv
         uses: r-lib/actions/setup-renv@v2
 
+      - name: Install blogdown
+        run: install.packages('blogdown')
+
       - name: Install hugo
         run: blogdown::install_hugo(version = '0.89.4', extended = TRUE)
         shell: Rscript {0}
