--- a/data/menu/main.yaml
+++ b/data/menu/main.yaml
@@ -3,6 +3,7 @@ main:
   - name:
       en: Level 1 (EN)
       de: Level 1 (DE)
+    ref: "/toc-tree//level-1"
     sub:
       - name:
           en: Level 1.1 (EN)
