--- a/data/menu/extra.yaml
+++ b/data/menu/extra.yaml
@@ -1,5 +1,9 @@
 ---
 header:
+  - name: Home
+    ref: https://daacs.net
+    icon: gdoc_home
+    external: true
   - name: GitHub
     ref: https://github.com/daacs/documentation
     icon: gdoc_github
